--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_grassland_island.yml
@@ -4,9 +4,9 @@
   locationConfig: CP14DemiplaneGrasslandIsland
   name: cp14-demiplane-location-grassland-island
   tags:
-  - CP14DemiplaneCave
+  - CP14DemiplaneOres
+  - CP14DemiplaneHerbals
   - CP14DemiplaneOpenSky
-  - CP14DemiplaneGrass
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
