--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grassland_island_ring.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t2_grassland_island_ring.yml
@@ -5,7 +5,7 @@
   name: cp14-demiplane-location-grassland-island
   tags:
   - CP14DemiplaneOpenSky
-  - CP14DemiplaneGrass
+  - CP14DemiplaneHerbals
   components:
   - type: MapLight
     ambientLightColor: "#BFEEFFFF"
