Demiplane modifiers groups & tiers (#678)
* data setup

* demiplanes modficators combine refactor

* generationProb

* demiplane tiers setup

* migration, and t2 loots

* t2 balance tweaks

* retags

* weather modifiers group

* maplight modifiers

* more passed checks

* wanderer buy positions localization fix

* fixes

--- a/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
+++ b/Resources/Prototypes/_CP14/Procedural/Demiplane/Locations/t1_caves.yml
@@ -1,14 +1,11 @@
 - type: cp14DemiplaneLocation
   id: T1Caves
+  tier: 1
   locationConfig: CP14DemiplaneCaves
   name: cp14-demiplane-location-cave
   tags:
-  - CP14DemiplaneCave
+  - CP14DemiplaneOres
   - CP14DemiplaneUnderground
-  components:
-  - type: CP14WeatherController
-    entries:
-    - visuals: CP14Mist
 
 - type: dungeonConfig
   id: CP14DemiplaneCaves
