sprite resize, file rename

--- a/Resources/Prototypes/_CP14/Entities/Structures/Furniture/barrel_crane.yml
+++ b/Resources/Prototypes/_CP14/Entities/Structures/Furniture/barrel_crane.yml
@@ -76,7 +76,7 @@
   suffix: Empty
   categories: [ ForkFiltered ]
   placement:
-    mode: PlaceFree
+    mode: SnapgridCenter
   components:
   - type: Sprite
     drawdepth: Mobs
