--- a/Resources/Prototypes/_CP14/Body/Organs/dwarf.yml
+++ b/Resources/Prototypes/_CP14/Body/Organs/dwarf.yml
@@ -2,6 +2,7 @@
   id: CP14OrganDwarfHeart
   parent: OrganHumanHeart
   name: dwarf heart
+  categories: [ ForkFiltered ]
   components:
   - type: Metabolizer
     metabolizerTypes: [CP14Dwarf]
@@ -10,6 +11,7 @@
   id: CP14DwarfOrganDwarfLiver
   parent: OrganHumanLiver
   name: dwarf liver
+  categories: [ ForkFiltered ]
   components:
   - type: Metabolizer
     metabolizerTypes: [CP14Dwarf]
@@ -18,6 +20,7 @@
   id: CP14DwarfOrganDwarfStomach
   parent: OrganHumanStomach
   name: dwarf stomach
+  categories: [ ForkFiltered ]
   components:
   - type: Sprite
     state: stomach
