--- a/Resources/Prototypes/_CP14/Entities/Mobs/Customization/Markings/human_hair.yml
+++ b/Resources/Prototypes/_CP14/Entities/Mobs/Customization/Markings/human_hair.yml
@@ -103,6 +103,14 @@
       state: ponytail7
       
 - type: marking
+  id: CP14HumanHairPulato
+  bodyPart: Hair
+  markingCategory: Hair
+  sprites:
+    - sprite: _CP14/Mobs/Customization/human_hair.rsi
+      state: pulato
+      
+- type: marking
   id: CP14HumanHairSideTail4
   bodyPart: Hair
   markingCategory: Hair
