split manacost in separate component

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Earth/T1_earth_wall.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Earth/T1_earth_wall.yml
@@ -8,9 +8,10 @@
     state: earth_wall
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.3
+  - type: CP14MagicEffectManaCost
+    manaCost: 15
   - type: CP14MagicEffect
     magicType: Earth
-    manaCost: 15
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
