--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Gate/T2_shadow_step.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Gate/T2_shadow_step.yml
@@ -8,9 +8,10 @@
     state: shadow_step
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.8
+  - type: CP14MagicEffectManaCost
+    manaCost: 20
   - type: CP14MagicEffect
     magicType: Gate
-    manaCost: 20
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
