--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_beer_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_beer_creation.yml
@@ -6,9 +6,10 @@
   - type: Sprite
     sprite: _CP14/Effects/Magic/spells_icons.rsi
     state: beer_creation
+  - type: CP14MagicEffectManaCost
+    manaCost: 50
   - type: CP14MagicEffect
     magicType: Water
-    manaCost: 50
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
