--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Water/T1_ice_shards.yml
@@ -8,9 +8,10 @@
     state: ice_shards
   - type: CP14MagicEffectCastSlowdown
     speedMultiplier: 0.75
+  - type: CP14MagicEffectManaCost
+    manaCost: 5
   - type: CP14MagicEffect
     magicType: Water
-    manaCost: 5
     effects:
     - !type:CP14SpellProjectile
       prototype: CP14IceShard
