--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Fire/T0_flame_creation.yml
@@ -6,9 +6,10 @@
   - type: Sprite
     sprite: _CP14/Effects/Magic/spells_icons.rsi
     state: flame_creation
+  - type: CP14MagicEffectManaCost
+    manaCost: 5
   - type: CP14MagicEffect
     magicType: Fire
-    manaCost: 5
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
