--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T0_sphere_of_light.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/LightDarkness/T0_sphere_of_light.yml
@@ -6,9 +6,10 @@
   - type: Sprite
     sprite: _CP14/Effects/Magic/spells_icons.rsi
     state: sphere_of_light
+  - type: CP14MagicEffectManaCost
+    manaCost: 10
   - type: CP14MagicEffect
     magicType: LightDarkness
-    manaCost: 10
     effects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
