--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Movement/T0_shadow_grab.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Movement/T0_shadow_grab.yml
@@ -6,6 +6,7 @@
   - type: Sprite
     sprite: _CP14/Effects/Magic/spells_icons.rsi
     state: shadow_grab
+  - type: CP14MagicEffectManaCost
     manaCost: 10
   - type: CP14MagicEffect
     magicType: Movement
