Magic spells code expansion (#692)
* split manacost in separate component

* stamina spells

* toggleable actions

* swap activeCasting on ActiveDoAfter

* remove dublication

* Update CP14SharedMagicSystem.ToggleableActions.cs

* EntityWoldTarget

* mana glove done

* fix spell scrolls interrupting

* fix cooldown problem

* clean up, edit stamina system

--- a/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_consume.yml
+++ b/Resources/Prototypes/_CP14/Entities/Actions/Spells/Meta/T0_mana_consume.yml
@@ -8,8 +8,6 @@
     state: mana_consume
   - type: CP14MagicEffect
     magicType: Meta
-    manaCost: 0
-    canModifyManacost: false
     telegraphyEffects:
     - !type:CP14SpellSpawnEntityOnTarget
       spawns:
@@ -34,9 +32,9 @@
     icon:
       sprite: _CP14/Effects/Magic/spells_icons.rsi
       state: mana_consume
-    event: !type:CP14DelayedEntityTargetActionEvent
-      cooldown: 1
-      castDelay: 2
+    event: !type:CP14ToggleableEntityTargetActionEvent
+      cooldown: 5
+      castTime: 10
       breakOnMove: true
 
 - type: entity
