--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/dagger.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/dagger.yml
@@ -36,7 +36,7 @@
   id: BladeIronDagger
   targetSlot: Blade
   sourcePart: CP14ModularBladeIronDagger
-  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/iron_dagger.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -47,7 +47,8 @@
   id: BladeGoldDagger
   targetSlot: Blade
   sourcePart: CP14ModularBladeGoldDagger
-  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/gold_dagger.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
+  color: "#ffaf47"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -58,7 +59,8 @@
   id: BladeCopperDagger
   targetSlot: Blade
   sourcePart: CP14ModularBladeCopperDagger
-  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/copper_dagger.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
+  color: "#bd712f"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -69,7 +71,8 @@
   id: BladeMithrilDagger
   targetSlot: Blade
   sourcePart: CP14ModularBladeMithrilDagger
-  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/mithril_dagger.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Dagger/metall_dagger.rsi
+  color: "#45d2a4"
   modifiers:
   - !type:Inherit
     copyFrom:
