--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/axe.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/axe.yml
@@ -31,7 +31,7 @@
   id: BladeIronAxe
   targetSlot: Blade
   sourcePart: CP14ModularBladeIronAxe
-  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/iron_axe.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/metall_axe.rsi
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -42,7 +42,8 @@
   id: BladeGoldAxe
   targetSlot: Blade
   sourcePart: CP14ModularBladeGoldAxe
-  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/gold_axe.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/metall_axe.rsi
+  color: "#ffaf47"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -53,7 +54,8 @@
   id: BladeCopperAxe
   targetSlot: Blade
   sourcePart: CP14ModularBladeCopperAxe
-  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/copper_axe.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/metall_axe.rsi
+  color: "#bd712f"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -64,7 +66,8 @@
   id: BladeMithrilAxe
   targetSlot: Blade
   sourcePart: CP14ModularBladeMithrilAxe
-  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/mithril_axe.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Axe/metall_axe.rsi
+  color: "#45d2a4"
   modifiers:
   - !type:Inherit
     copyFrom:
