--- a/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/rapier.yml
+++ b/Resources/Prototypes/_CP14/Entities/Objects/ModularTools/Blade/rapier.yml
@@ -17,8 +17,9 @@
   name: iron rapier blade
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Blade/Rapier/iron_rapier.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Blade/Rapier/metall_rapier.rsi
+    layers:
+    - state: icon
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeIronRapier
@@ -29,8 +30,10 @@
   name: golden rapier blade
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Blade/Rapier/gold_rapier.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Blade/Rapier/metall_rapier.rsi
+    layers:
+    - state: icon
+      color: "#ffaf47"
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeGoldRapier
@@ -41,8 +44,10 @@
   name: copper rapier blade
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Blade/Rapier/copper_rapier.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Blade/Rapier/metall_rapier.rsi
+    layers:
+    - state: icon
+      color: "#bd712f"
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeCopperRapier
@@ -53,8 +58,10 @@
   name: mithril rapier blade
   components:
   - type: Sprite
-    sprite: _CP14/Objects/ModularTools/Blade/Rapier/mithril_rapier.rsi
-    state: icon
+    sprite: _CP14/Objects/ModularTools/Blade/Rapier/metall_rapier.rsi
+    layers:
+    - state: icon
+      color: "#45d2a4"
   - type: CP14ModularCraftPart
     possibleParts:
     - BladeMithrilRapier
