--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/sickle.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/sickle.yml
@@ -27,7 +27,7 @@
   id: BladeIronSickle
   targetSlot: Blade
   sourcePart: CP14ModularBladeIronSickle
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/iron_sickle.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/metall_sickle.rsi
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -38,7 +38,8 @@
   id: BladeGoldSickle
   targetSlot: Blade
   sourcePart: CP14ModularBladeIronSickle
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/gold_sickle.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/metall_sickle.rsi
+  color: "#ffaf47"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -49,7 +50,8 @@
   id: BladeCopperSickle
   targetSlot: Blade
   sourcePart: CP14ModularBladeCopperSickle
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/copper_sickle.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/metall_sickle.rsi
+  color: "#bd712f"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -60,7 +62,8 @@
   id: BladeMithrilSickle
   targetSlot: Blade
   sourcePart: CP14ModularBladeMithrilSickle
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/mithril_sickle.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sickle/metall_sickle.rsi
+  color: "#45d2a4"
   modifiers:
   - !type:Inherit
     copyFrom:
