--- a/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
+++ b/Resources/Prototypes/_CP14/ModularCraft/Blade/sword.yml
@@ -41,7 +41,7 @@
   id: BladeIronSword
   targetSlot: Blade
   sourcePart: CP14ModularBladeIronSword
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/iron_sword.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -52,7 +52,8 @@
   id: BladeGoldSword
   targetSlot: Blade
   sourcePart: CP14ModularBladeGoldSword
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/gold_sword.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
+  color: "#ffaf47"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -63,7 +64,8 @@
   id: BladeCopperSword
   targetSlot: Blade
   sourcePart: CP14ModularBladeCopperSword
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/copper_sword.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
+  color: "#bd712f"
   modifiers:
   - !type:Inherit
     copyFrom:
@@ -74,7 +76,8 @@
   id: BladeMithrilSword
   targetSlot: Blade
   sourcePart: CP14ModularBladeMithrilSword
-  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/mithril_sword.rsi
+  rsiPath: _CP14/Objects/ModularTools/Blade/Sword/metall_sword.rsi
+  color: "#45d2a4"
   modifiers:
   - !type:Inherit
     copyFrom:
